# rmpeg

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  automerge.sh  autoslop.sh  index.html
.github/workflows/: ci.yml  pages.yml  upstream-samples.yml
agents/: autoresearch.py  autoslop.md  program.md
agents/runs/: 20260613-133716.md  20260613-175619.md  20260613-180504.md  20260613-181245.md  20260613-182546.md  20260613-183312.md  20260613-184350.md  20260613-185417.md  20260613-191053.md  20260614-001005.md  20260614-002632.md  20260614-003500.md  20260614-004505.md  20260614-093926.md  20260614-100431.md  20260614-102646.md  20260614-104410.md  20260614-180543.md  20260614-182300.md  20260614-184140.md  20260614-190236.md
crates/rmpeg-cli/: Cargo.toml
crates/rmpeg-cli/src/: main.rs
crates/rmpeg-codec/: Cargo.toml
crates/rmpeg-codec/src/: audio.rs  gif.rs  image.rs  lib.rs  md5.rs  pcm.rs  video.rs
crates/rmpeg-core/: Cargo.toml
crates/rmpeg-core/src/: error.rs  io.rs  lib.rs  metadata.rs
crates/rmpeg-format/: Cargo.toml
crates/rmpeg-format/src/: aac.rs  ac3.rs  act.rs  aea.rs  alg_mm.rs  alias_pix.rs  alp.rs  amr.rs  amv.rs  anm.rs  ape.rs  apm.rs  apv.rs  asf.rs  ast.rs  avi.rs  bethsoftvid.rs  (+96 more)
crates/rmpeg-probe/: Cargo.toml
harness/scripts/: compare_framemd5.py  compare_probe_json.py  generate_samples.py  render_site.py  run_benchmarks.py  run_ffmpeg_samples.py  run_mirrored_tests.py  score.py
notes/: README.md  unexpected-quirks.md
site/static/: CNAME
site/templates/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
(+1 files in other folders)
