[package]
name = "rmpeg-codec"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.186"
openh264 = { version = "0.9.3", default-features = false, features = ["libloading"] }
opus-decoder = "0.1.1"
png = "0.18.1"
rmpeg-core = { path = "../rmpeg-core" }
rmpeg-format = { path = "../rmpeg-format" }
symphonia = { version = "0.6.0", default-features = false, features = ["aac", "flac", "id3v1", "id3v2", "isomp4", "mp3", "ogg", "vorbis"] }
